--- a/noaa_buoy_to_db_etl.ipynb
+++ b/noaa_buoy_to_db_etl.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Author: S. Grunert**     \n",
     "**Revised: February 1, 2016**     \n",
-    "**Topic: ETL for buoy data gathering, clean-up, and storage in mongoDB.**     \n",
+    "**Topic: ETL for NOAA buoy data gathering, clean-up, and storage in sqlite.**     \n",
     "**Versions: Py 2.7** \n"
    ]
   },
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Download Buoy Data to Local Files."
+    "###EXTRACT: Download Buoy Data from NOAA."
    ]
   },
   {
@@ -43,13 +43,14 @@
     "\n",
     "mth = raw_input(\"Enter Month like Dec: \")\n",
     "buoys = ['46240','46236','46239']\n",
+    "year = ['_2015_']\n",
     "\n",
     "for buoy in buoys:\n",
     "    url = 'http://ndbc-load.nws.noaa.gov/data/stdmet/' + mth + \"/\" + buoy + \".txt\"\n",
     "    uh = urllib.urlopen(url)\n",
     "    data = uh.read()\n",
     "    print url\n",
-    "    filename = 'C:\\\\buoy_data\\\\' + buoy + '_2015_' + mth + '.txt'\n",
+    "    filename = 'C:\\\\buoy_data\\\\' + buoy + year + mth + '.txt'\n",
     "    outfile = open(filename, \"w\")\n",
     "    outfile.write(data)\n",
     "    outfile.close()\n"
@@ -61,12 +62,12 @@
     "collapsed": false
    },
    "source": [
-    "###Transform Buoy Data"
+    "###TRANSFORM: Add buoy ID, pick columns, and merge files. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -81,7 +82,7 @@
     }
    ],
    "source": [
-    "#Combine individual buoy downloads into a single file.\n",
+    "#Combine individual buoy downloads into a single file picking applicable columns.\n",
     "\n",
     "import glob\n",
     "import os\n",
@@ -115,31 +116,11 @@
     "            row.append('\\t')\n",
     "            row.append(lvalues[4])\n",
     "            row.append('\\t')\n",
-    "            row.append(lvalues[5])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[6])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[7])\n",
-    "            row.append('\\t')\n",
     "            row.append(lvalues[8])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[9])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[10])\n",
     "            row.append('\\t')\n",
     "            row.append(lvalues[11])\n",
     "            row.append('\\t')\n",
-    "            row.append(lvalues[12])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[13])\n",
-    "            row.append('\\t')\n",
     "            row.append(lvalues[14])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[15])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[16])\n",
-    "            row.append('\\t')\n",
-    "            row.append(lvalues[17])\n",
     "            row.append('\\n')\n",
     "            output = ''.join(map(str, row))\n",
     "            dhandle.write(output)\n",
@@ -150,8 +131,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###LOAD: Insert data into a sqlite database."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -173,35 +161,41 @@
     "import time\n",
     "\n",
     "os.chdir('C:\\\\buoy_data\\\\')\n",
-    "fhand = open(\"import.txt\")\n",
+    "fhand = open(\"C:\\\\buoy_data\\\\data\\\\import.txt\")\n",
     "conn = sqlite3.connect('buoy.sqlite')\n",
     "cur = conn.cursor()\n",
     "cur.execute('''CREATE TABLE IF NOT EXISTS buoy_data\n",
-    "    (buoy TEXT,year TEXT,month TEXT,day TEXT,hour TEXT,minute TEXT,WDIR TEXT,WSPD TEXT,GST TEXT,WVHT TEXT,DPD TEXT,APD TEXT,MWD TEXT,PRES TEXT,ATMP TEXT,WTMP TEXT,DEWP TEXT,VIS TEXT,TIDE TEXT)''')\n",
+    "    (buoy TEXT,year TEXT,month TEXT,day TEXT,hour TEXT,minute TEXT,WVHT TEXT,MWD TEXT,WTMP TEXT)''')\n",
     "count = 0\n",
     "try:\n",
     "    for line in fhand :\n",
     "        #if count >10: break\n",
     "        line = line.rstrip()\n",
     "        line = line.split('\\t')\n",
-    "        cur.execute('''INSERT INTO buoy_data (buoy,year,month,day,hour,minute,WDIR,WSPD,GST,WVHT,DPD,APD,MWD,PRES,ATMP,WTMP,DEWP,VIS,TIDE)\n",
-    "            VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)''',(line[0],line[1],line[2],line[3],line[4],line[5],line[6],line[7],line[8],line[9],line[10],\n",
-    "            line[11],line[12],line[13],line[14],line[15],line[16],line[17],line[18]))\n",
-    "        conn.commit()\n",
+    "        cur.execute('''INSERT INTO buoy_data (buoy,year,month,day,hour,minute,WVHT,MWD,WTMP)\n",
+    "            VALUES(?,?,?,?,?,?,?,?,?)''',(line[0],line[1],line[2],line[3],line[4],line[5],line[6],line[7],line[8]))\n",
+    "        #conn.commit()\n",
     "        #time.sleep(0.1)\n",
     "        #print line\n",
     "        count = count + 1\n",
-    "        \n",
+    "    conn.commit()\n",
     "except:\n",
     "    conn.rollback()\n",
     "conn.close()\n",
-    "#fhand.close()\n",
+    "fhand.close()\n",
     "print \"Rows Loaded:\" , count"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###VISUALIZE: Download a file suitable for Tableau"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": false
