--- a/patterns_file_api_handles.ipynb
+++ b/patterns_file_api_handles.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Author: S. Grunert**     \n",
     "**Revised: January 31, 2016**     \n",
-    "**Topic: File and api connections in Python.**     \n",
+    "**Topic: File and api handles in Python.**     \n",
     "**Versions: Py 2.7**  "
    ]
   },
@@ -14,7 +14,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Flat File Sources"
+    "###Simple Flat File Sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####File Write - File Read"
    ]
   },
   {
@@ -50,8 +57,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####File Read and Process By Line"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -183,6 +197,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####JSON Basic Read of Key-Values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
@@ -211,6 +232,13 @@
     "info = json.loads(data)\n",
     "for item in info['employees']:\n",
     "    print item[\"firstName\"], item[\"lastName\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####JSON Remote Read with Count Processing"
    ]
   },
   {
